--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
   },
   "dependencies": {
     "gatsby": "^3.3.1",
+    "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-postcss": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-sharp": "^3.4.0",
+    "postcss": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
